Preventing overflow of main-view height

--- a/projects/anapneo-lib/src/anapneo/anapneo.component.scss
+++ b/projects/anapneo-lib/src/anapneo/anapneo.component.scss
@@ -18,9 +18,10 @@
 .main-view{
   width: 80vw;
   display: inline-block;
-  margin-top: 40px;
+  padding-top: 40px;
   margin-left: 10vw;
   margin-right: 10vw;
+  overflow-y: scroll;
 }
 .sidebar-view {
   width: 100vw;
